test/classes/marybeth/test_dispatch_record.good
test_dispatch_record.chpl:9: error: inheritance is not currently supported for records
